<resources>
    <string name="app_name">showtracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_show">AddShowActivity</string>
    <string name="title">title</string>
    <string name="producer">producer</string>
    <string name="firstYear">first year</string>
    <string name="lastYear">last year</string>
    <string name="noOfSeasons">number of seasons</string>
    <string name="seen">seen</string>
    <string name="title_activity_update_show">UpdateShowActivity</string>
    <string name="not_seen_res">Not seen</string>
    <string name="title_add">Title:</string>
    <string name="producer_add">Producer:</string>
    <string name="release_year_add">Release year:</string>
    <string name="ending_year_add">Ending year:</string>
    <string name="seasons_add">No of seasons:</string>
    <string name="rating">Rating:</string>
    <string name="update">UPDATE</string>
    <string name="dialogNo">NO</string>
    <string name="dialogYes">YES</string>
    <string name="fabErrorMessage">Please fill in all the fields!</string>
    <string name="newShow">New Show</string>
    <string name="showsExtra">shows</string>
    <string name="idExtra">id</string>
    <string name="showExtra">show</string>
</resources>